# Dust_InfantryRobotChassis

./: .clangd  .gitignore  CMakeLists.txt  CMakeListsTemplate.txt  CMakeLists_template.txt  bug-list.md  步兵功能一览.md
.github/workflows/: buil.yml  build.yml
Algorithm/: alg_math.cpp  alg_math.h  alg_pid.cpp  alg_pid.h  low_pass_filter.hpp  slidingmodec.h  user_lib.h
App/: Init.cpp  Robot.cpp  Robot.h
App/Chassis/: app_chassis.cpp  app_chassis.h
App/Gimbal/: app_gimbal.cpp  app_gimbal.h
Board/dm-h723/: .cproject  .project  Dust_Chassis.ioc  board.cmake
Board/dm-h723/Inc/: FreeRTOSConfig.h  stm32h7xx_it.h  usbd_cdc_if.h
Board/dm-h723/Src/: freertos.c  gpio.c  main.c  stm32h7xx_it.c  usart.c  usbd_cdc_if.c
Board/dm-h723/config/: openocd_dap.cfg
Bsp/can/: bsp_can.cpp  bsp_can.h
Bsp/gpio/: bsp_gpio.h
Bsp/pwm/: bsp_pwm.h
Bsp/usart/: bsp_usart.cpp
Bsp/usb/: bsp_usb.c  bsp_usb.h
Common/Algorithm/: alg_math.h  alg_pid.cpp  user_lib.h
Common/Communication/: dvc_MCU_comm.cpp  dvc_MCU_comm.h  dvc_mcu_comm.h  dvc_pc_comm.cpp  dvc_pc_comm.h
Common/Device/: debug_tools.cpp  debug_tools.h  dvc_motor_dji.cpp  dvc_motor_dm.cpp  supercap.cpp
Common/Drivers/: bsp_pwm.cpp
Communication/: bsp_can.h  bsp_usart.h  bsp_usb.cpp  dvc_MCU_comm.cpp  dvc_MCU_comm.h
Core/Src/: fdcan.c  stm32h7xx_it.c
Device/: BMI088driver.h  dvc_motor_dm.h  dvc_referee.cpp  dvc_referee.h  imu.hpp  referee.cpp  referee.h  supercap.h
Drivers/: bsp_dwt.cpp  bsp_gpio.cpp
Firmware/DownBoard_Interaction/: Robot.cpp  app_chassis.cpp
Firmware/shoot_test/: Robot.h  app_chassis.cpp  app_chassis.h  app_gimbal.h
Interaction/: Init.cpp  Init.h  Robot.cpp  Robot.h  app_chassis.cpp  app_chassis.h  app_gimbal.cpp  app_gimbal.h
Modules/algorithm/pid/: alg_pid.h
Modules/comm/: dvc_MCU_comm.cpp  dvc_MCU_comm.h  dvc_PC_comm.cpp  dvc_PC_comm.h
Modules/motor/DJImotor/: dvc_motor_dji.cpp  dvc_motor_dji.h
Modules/motor/DMmotor/: dvc_motor_dm.cpp  dvc_motor_dm.h  dvc_motor_dm.hpp
MotorControl/: dvc_motor_dji.h
cmake/: toolchain-arm-none-eabi.cmake
firmware_releases/: dm-h723_DownBoard_Interaction.hex
